--- a/skin/frontend/default/newrespondf/css/iphone.css
+++ b/skin/frontend/default/newrespondf/css/iphone.css
@@ -5743,7 +5743,7 @@ table#checkout-review-table tfoot td .price {
 }
 
 .page-title h1 {
-    font: 19px ITCavantGardestd-bk;
+    font: 19px/19px ITCavantGardestd-bk;
     text-transform: uppercase;
     margin-top: 15px;
     padding: 0 12px;
@@ -6428,8 +6428,9 @@ button.btn-invite.button {
 
 .page-head h3 {
     color: #555;
-    font: 24px ITCAvantGardeStd-Bk !important;
+    font: normal 19px ITCAvantGardeStd-Bk !important;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .section.allow.active .step-count {
