--- a/skin/frontend/new-yogasmoga/yogasmoga-theme/css/styles.css
+++ b/skin/frontend/new-yogasmoga/yogasmoga-theme/css/styles.css
@@ -2318,7 +2318,7 @@ div.mycategory-products div.item
     margin-left : 20px;
     margin-bottom : 30px;
     width : 230px;
-    height : 340px;
+    height : 470px;
 }
 div.mycategory-products div.item a > table
 {
